fix: Jsonpath with pojo DTO handling.
