# template-utils-service-api/src/main/java/net/videki/templateutils/api/document/api/controller/DocumentstructureApiController.java
@@ -22,6 +22,9 @@ package net.videki.templateutils.api.document.api.controller;
 
 import net.videki.templateutils.api.document.service.DocumentStructureApiService;
 import net.videki.templateutils.api.document.service.TemplateApiService;
+import net.videki.templateutils.template.core.context.ContextObjectProxyBuilder;
+import net.videki.templateutils.template.core.context.dto.JsonTemplateContext;
+import net.videki.templateutils.template.core.context.dto.TemplateContext;
 import net.videki.templateutils.template.core.documentstructure.DocumentStructure;
 import net.videki.templateutils.template.core.documentstructure.StoredGenerationResult;
 import net.videki.templateutils.template.core.documentstructure.StoredResultDocument;
@@ -31,12 +34,10 @@ import net.videki.templateutils.template.core.service.exception.TemplateServiceE
 import net.videki.templateutils.api.document.api.mapper.GenerationResultApiModelMapper;
 import net.videki.templateutils.api.document.api.mapper.GetDocumentStructuresResponseApiModelMapper;
 import net.videki.templateutils.api.document.api.mapper.PageableMapper;
-import net.videki.templateutils.api.document.api.mapper.ValueSetItemApiModelToEntityMapper;
 import net.videki.templateutils.api.document.api.model.DocStructureJobApiResponse;
 import net.videki.templateutils.api.document.api.model.GenerationResult;
 import net.videki.templateutils.api.document.api.model.GetDocumentStructuresResponse;
 import net.videki.templateutils.api.document.api.model.Pageable;
-import net.videki.templateutils.api.document.api.model.ValueSetItem;
 
 import org.springframework.core.io.InputStreamResource;
 import org.springframework.core.io.Resource;
@@ -54,6 +55,7 @@ import lombok.extern.slf4j.Slf4j;
 import java.io.ByteArrayInputStream;
 import java.util.List;
 import java.util.Locale;
+import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
 
@@ -130,8 +132,13 @@ public class DocumentstructureApiController implements DocumentstructureApi {
      * @param notificationUrl optional notification hook (webhook, etc.) to indicate
      *                        job completion.
      */
-    public ResponseEntity<DocStructureJobApiResponse> postDocumentStructureGenerationJob(String documentStructureId,
-            String locale, List<ValueSetItem> valueSetItems, String valuesetTransactionId, String notificationUrl) {
+
+
+    public ResponseEntity<DocStructureJobApiResponse> postDocumentStructureGenerationJob(final String documentStructureId,
+                                                                                         final String locale,
+                                                                                         final List<Object> requestBody,
+                                                                                         final String valuesetTransactionId,
+                                                                                         final String notificationUrl) {
 
         final DocStructureJobApiResponse result = new DocStructureJobApiResponse();
 
@@ -141,20 +148,27 @@ public class DocumentstructureApiController implements DocumentstructureApi {
         final ValueSet valueSet = new ValueSet(valuesetTransactionId);
         valueSet.setDocumentStructureId(documentStructureId);
         valueSet.setLocale(new Locale(locale));
-        for (final net.videki.templateutils.api.document.model.ValueSetItem actItem : ValueSetItemApiModelToEntityMapper.INSTANCE
-                .apiModelListToEntityList(valueSetItems)) {
-            valueSet.addContext(actItem.getTemplateElementId(), actItem.getValue());
+        for (final Object actItem : requestBody) {
+            final Map<?, ?> valueMap = (Map<?, ?>)actItem;
+            final Optional<?> c = valueMap.keySet().stream().findFirst();
+            final String contextKey = c.isPresent() ? (String)c.get() : TemplateContext.CONTEXT_ROOT_KEY;
+            
+            final JsonTemplateContext ctx = new JsonTemplateContext();
+            ctx.addValueObject(contextKey, ContextObjectProxyBuilder.build(valueMap));
+
+            valueSet.addContext(ctx);
         }
+        valueSet.build();
 
         if (log.isDebugEnabled()) {
             log.debug(
                     "Document structure generation request assembled. DocumentStructureId: [{}], valueset item count: [{}]",
-                    documentStructureId, valueSetItems.size());
+                    documentStructureId, valueSet.getValues().getCtx().size());
         }
         if (log.isTraceEnabled()) {
             log.trace(
                     "Document structure generation request assembled. DocumentStructureId: [{}], valueset items: [{}]",
-                    documentStructureId, valueSetItems);
+                    documentStructureId, valueSet.getValues());
         }
 
         this.documentStructureApiService.postDocumentStructureGenerationJob(transactionId, documentStructureId,
