# template-utils-service-api/src/main/java/net/videki/templateutils/api/document/model/ValueSetItem.java
@@ -1,34 +1,0 @@
-package net.videki.templateutils.api.document.model;
-
-/*-
- * #%L
- * template-utils-service-api
- * %%
- * Copyright (C) 2021 Levente Ban
- * %%
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- * 
- *      http://www.apache.org/licenses/LICENSE-2.0
- * 
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- * #L%
- */
-
-import lombok.Data;
-import net.videki.templateutils.template.core.context.JsonTemplateContext;
-
-/**
- * ValueSetItem.
- */
-@Data
-public class ValueSetItem   {
-  private String templateElementId;
-  private JsonTemplateContext value;
-}
-
