# template-utils-service-api/src/main/java/net/videki/templateutils/api/document/service/impl/DefaultTemplateApiService.java
@@ -26,8 +26,8 @@ import net.minidev.json.JSONValue;
 import net.videki.templateutils.api.document.service.NotificationService;
 import net.videki.templateutils.api.document.service.TemplateApiService;
 import net.videki.templateutils.template.core.configuration.TemplateServiceConfiguration;
-import net.videki.templateutils.template.core.context.JsonTemplateContext;
-import net.videki.templateutils.template.core.context.TemplateContext;
+import net.videki.templateutils.template.core.context.dto.JsonTemplateContext;
+import net.videki.templateutils.template.core.context.dto.TemplateContext;
 import net.videki.templateutils.template.core.documentstructure.StoredGenerationResult;
 import net.videki.templateutils.template.core.documentstructure.StoredResultDocument;
 import net.videki.templateutils.template.core.provider.persistence.Page;
